test/pass/inference.sest
module Inference = struct

  val f<?$a :: (foo)>(r : {foo : int, ?$a}, x) =
    {x.foo, if true then x else r}

  val main(_) =
    f({ foo = 42 }, { foo = 57 })

end
